Changed the font-color
Changed the font-color from white to rgb(255, 255, 255, .9)

--- a/index.css
+++ b/index.css
@@ -136,5 +136,5 @@ input:checked + .slider:before {
 
 .dark-mode {
     background-color: var(--fc-dark);
-    color: var(--fc-light);
+    color: rgb(255, 255, 255, .9);
 }
